# SuperStreaming

./: .gitignore  .gitmodules  README.md
Papers/: Notes.txt
Readings/: Notes.txt
Xtream_1.0/: README_THIS_FILE_MUST_BE_UPDATED  Xtream  Xtream.pro  Xtream.pro.user.e49d12c.21  Xtream.qml  Xtream.qmlc  Xtream.qmlproject  main.cpp  main.gcda  main.gcno  moc_player.cpp  moc_player.gcda  moc_player.gcno  moc_predefs.h  player.cpp  player.gcda  player.gcno  player.h  player_new.cpp  player_new.h  transcoding.cpp  transcoding.gcda  transcoding.gcno  transcoding.h  transcoding_new.cpp
Xtream_1.0/Qt5-debug-build/: Xtream  main.gcda  main.gcno  moc_player.cpp  moc_player.gcda  moc_player.gcno  player.gcda  player.gcno  transcoding.gcda  transcoding.gcno
Xtream_1.0/content/: Background.qml  Background.qmlc  Button.qmlc  CurtainEffect.qmlc  DelegateItem.qml  DelegateItem.qmlc  DetailsView.qml  DetailsView.qmlc  InfoView.qml  InfoView.qmlc  InfoViewItem.qmlc  MainView.qml  MainView.qmlc  MoviesModel.qml  MoviesModel.qmlc  PlayerView.qml  PlayerView.qmlc  RatingsItem.qmlc  SettingsView.qml  SettingsView.qmlc  Switch.qmlc
Xtream_1.0/not_index/: baz3.mkv.index
benchmark/skipping/: MSE.py  discriminator.py
benchmark/skipping/util/: data_loader.py  labeler.py
build-Xtream-Qt5-Release/: Xtream  main.gcda  main.gcno  moc_player.cpp  moc_player.gcda  moc_player.gcno  player.gcda  player.gcno  transcoding.gcda  transcoding.gcno
ffmpeg_examples/live555_server/: readme
ffmpeg_examples/live555_server/live/mediaServer/: live555MediaServer
ffmpeg_examples/live555_server/live/proxyServer/: live555ProxyServer
ffmpeg_examples/live555_server/live/testProgs/: MPEG2TransportStreamIndexer  openRTSP  playSIP  registerRTSPStream  sapWatch  testAMRAudioStreamer  testDVVideoStreamer  testH264VideoStreamer  testH264VideoToTransportStream  testH265VideoStreamer  testH265VideoToTransportStream  testMKVStreamer  testMP3Receiver  testMP3Streamer  testMPEG1or2AudioVideoStreamer  testMPEG1or2ProgramToTransportStream  testMPEG1or2Splitter  testMPEG1or2VideoReceiver  testMPEG1or2VideoStreamer  testMPEG2TransportReceiver  testMPEG2TransportStreamTrickPlay  testMPEG2TransportStreamer  testMPEG4VideoStreamer  testOggStreamer  testOnDemandRTSPServer  testRTSPClient  testRelay  testReplicator  testWAVAudioStreamer  vobStreamer
ffmpeg_examples/transcoding_example/: CMakeLists.txt  README.md  main.cpp  script.sh
ffmpeg_examples/video_player/: CMakeLists.txt  main.cpp  player.h
live555_server/live/liveMedia/: #MatroskaFileParser.cpp#
live555_server/live/mediaServer/: ff.c  live555MediaServer
live555_server/live/proxyServer/: live555ProxyServer
live555_server/live/testProgs/: openRTSP  playSIP  sapWatch  testH264VideoStreamer  testH264VideoToTransportStream  testH265VideoStreamer  testH265VideoToTransportStream  testMP3Receiver  testMP3Streamer  testMPEG1or2ProgramToTransportStream  testMPEG1or2VideoReceiver  testMPEG1or2VideoStreamer  testMPEG2TransportReceiver  testMPEG2TransportStreamer  testMPEG4VideoStreamer  testOggStreamer  testReplicator
video_player/: CMakeLists.txt  README.md  VideoFrame.cpp  VideoFrame.h  a.out  main.cpp  player.h  transcoding  transcoding.cbp  video_state.h
video_player_testing/: CMakeLists.txt  main.cpp  test_Decoder  test_Picture  test_Player  test_Queue  test_Synchronization  transcoding
video_player_testing/tests/: Decoder_test.cpp  Picture_test.cpp  Player_test.cpp  Queue_test.cpp  Synchronization_test.cpp
video_player_testing_lcov/: CMakeLists.txt  coverage.info  main.cpp  main.d  main.gcda  main.gcno  makefile  transcoding
video_skipping/: CMakeLists.txt  a.out
video_skipping/src/: Skipping.cpp  Skipping.h  SkippingContext.cpp  SkippingContext.h  VideoContext.cpp  VideoContext.h  VideoFrame.cpp  VideoFrame.h  main.cpp  queue.h
